syntax = "proto3";

service StripeWebhook {
  rpc SendEvent (StripeEvent) returns (StripeEvent) {}
  rpc CreateCheckoutSession (Empty) returns (CheckoutSession) {}
}

message StripeEvent {
  string type = 1;
  string data = 2;
}

message CheckoutSession {
  string url = 1;
}

message Empty {}
